--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 <table border="0" cellspacing="0" cellpadding="0">
   <tbody>
     <tr>
-      <td><iframe src="https://player.twitch.tv/?channel=shnumi&enableExtensions=true&muted=true&parent=twitch.tv&player=popout&quality=chunked&volume=1"></iframe></td>
+      <td><iframe src="https://player.twitch.tv/?channel=shnumi&parent=eternitegik.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe></td>
       <td><iframe src="https://www.twitch.tv/popout/shnumi/chat?popout="></iframe></td>
       <td><iframe src="https://trovo.live/chat/Shnumi?"></iframe></td>
     </tr>
