--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@ body {
   <tbody>
     <tr>
       <td><iframe src="https://player.twitch.tv/?channel=shnumi&parent=eternitegik.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe></td>
-      <td><iframe src="https://www.twitch.tv/popout/shnumi/chat?popout="></iframe></td>
+      <td>
+          <!--<iframe src="https://www.twitch.tv/popout/shnumi/chat?popout=&parent=eternitegik.github.io"></iframe>-->
+        <iframe src="http://twitch.tv/chat/embed?channel=shnumi&popout_chat=true"></iframe></td>
       <td><iframe src="https://trovo.live/chat/Shnumi?"></iframe></td>
     </tr>
   </tbody>
