--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
   <tbody>
     <tr>
       <td><iframe  id="player" src="https://player.twitch.tv/?channel=shnumi&parent=eternitegik.github.io" frameborder="0" allowfullscreen="true" scrolling="no"></iframe></td>
-      <td><iframe id="chatTwitc" frameborder="0" src="https://www.twitch.tv/embed/shnumi/chat?parent=eternitegik.github.io&theme=dark"></iframe></td>
+      <td><iframe id="chatTwitc" frameborder="0" src="https://www.twitch.tv/embed/shnumi/chat?parent=eternitegik.github.io&dark"></iframe></td>
       <td><iframe id="chatTrovo" frameborder="0" src="https://trovo.live/chat/Shnumi?"></iframe></td>
     </tr>
   </tbody>
