--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {
 </style>
 </head>
 
-<body>
+<!--<body>
 <table border="0" cellspacing="0" cellpadding="0">
   <tbody>
     <tr>
@@ -38,5 +38,32 @@ body {
     </tr>
   </tbody>
 </table>
-</body>
+</body>-->
+    <html>
+  <body>
+    <!-- Add a placeholder for the Twitch embed -->
+    <div id="twitch-embed"></div>
+
+    <!-- Load the Twitch embed script -->
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+    <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element. -->
+    <script type="text/javascript">
+      var embed = new Twitch.Embed("twitch-embed", {
+        width: 854,
+        height: 480,
+        channel: "monstercat",
+        layout: "video",
+        autoplay: false,
+        // Only needed if this page is going to be embedded on other websites
+        parent: ["eternitegik.github.io"]
+      });
+
+      embed.addEventListener(Twitch.Embed.VIDEO_READY, () => {
+        var player = embed.getPlayer();
+        player.play();
+      });
+    </script>
+  </body>
+</html>
 </html>
