--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ body {
       var embed = new Twitch.Embed("twitch-embed", {
         width: 854,
         height: 480,
-        channel: "monstercat",
-        layout: "video",
+        channel: "shnumi",
+        layout: "video-with-chat",
         autoplay: false,
         // Only needed if this page is going to be embedded on other websites
         parent: ["eternitegik.github.io"]
