--- a/index.html
+++ b/index.html
@@ -41,8 +41,16 @@ body {
 </body>-->
     <html>
   <body>
+      <table border="0" cellspacing="0" cellpadding="0">
+          <tbody>
+            <tr>
+              <td><div id="twitch-embed player"></div></td>
+              <td><iframe id="chatTwitc" frameborder="0" src="https://www.twitch.tv/embed/shnumi/chat?parent=eternitegik.github.io&dark"></iframe></td>
+            </tr>
+          </tbody>
+        </table>
     <!-- Add a placeholder for the Twitch embed -->
-    <div id="twitch-embed"></div>
+
 
     <!-- Load the Twitch embed script -->
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
