--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
     width: 100%;
     background-color: rgba(0,0,0,1.00);
 }
-#player {
+#twitch-embed {
     height: 900px;
     width: 900px;
     background-color: rgba(0,0,0,1.00);
@@ -44,7 +44,7 @@ body {
       <table border="0" cellspacing="0" cellpadding="0">
           <tbody>
             <tr>
-              <td><div id="twitch-embed player"></div></td>
+              <td><div id="twitch-embed"></div></td>
               <td><iframe id="chatTwitc" frameborder="0" src="https://www.twitch.tv/embed/shnumi/chat?parent=eternitegik.github.io&dark"></iframe></td>
             </tr>
           </tbody>
