--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
           <tbody>
             <tr>
               <td><div id="twitch-embed"></div></td>
-              <td><iframe id="chatTwitc" frameborder="0" src="https://www.twitch.tv/embed/shnumi/chat?parent=eternitegik.github.io&dark"></iframe></td>
+              <td><iframe id="chatTrovo" frameborder="0" src="https://trovo.live/chat/Shnumi?"></iframe></td>
             </tr>
           </tbody>
         </table>
@@ -58,8 +58,8 @@ body {
     <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element. -->
     <script type="text/javascript">
       var embed = new Twitch.Embed("twitch-embed", {
-        width: 854,
-        height: 480,
+        width: 1400,
+        height: 900,
         channel: "shnumi",
         layout: "video-with-chat",
         autoplay: false,
