--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ body {
     width: 900px;
     background-color: rgba(0,0,0,1.00);
 }
-#chatTwitc {
+#Twitc {
     height: 900px;
-    width: 500px;
+    width: 1400px;
     background-color: rgba(0,0,0,1.00);
 }
 #chatTrovo {
@@ -44,7 +44,7 @@ body {
       <table border="0" cellspacing="0" cellpadding="0">
           <tbody>
             <tr>
-              <td><div id="twitch-embed"></div></td>
+              <td id="Twitc"><div id="twitch-embed"></div></td>
               <td><iframe id="chatTrovo" frameborder="0" src="https://trovo.live/chat/Shnumi?"></iframe></td>
             </tr>
           </tbody>
