--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Twitch-Trovo Chat</title>
 <style type="text/css">
 body {
     margin: 0px;
@@ -27,51 +27,30 @@ body {
 }
 </style>
 </head>
+      <body>
+          <table border="0" cellspacing="0" cellpadding="0">
+              <tbody>
+                <tr>
+                  <td id="Twitc"><div id="twitch-embed"></div></td>
+                  <td><iframe id="chatTrovo" frameborder="0" src="https://trovo.live/chat/Shnumi?"></iframe></td>
+                </tr>
+              </tbody>
+            </table>
+        <script src="https://embed.twitch.tv/embed/v1.js"></script>
+        <script type="text/javascript">
+          var embed = new Twitch.Embed("twitch-embed", {
+            width: 1400,
+            height: "100%",
+            channel: "shnumi",
+            layout: "video-with-chat",
+            autoplay: true,
+            parent: ["eternitegik.github.io"]
+          });
 
-<!--<body>
-<table border="0" cellspacing="0" cellpadding="0">
-  <tbody>
-    <tr>
-      <td><iframe  id="player" src="https://player.twitch.tv/?channel=shnumi&parent=eternitegik.github.io" frameborder="0" allowfullscreen="true" scrolling="no"></iframe></td>        
-      <td><iframe id="chatTrovo" frameborder="0" src="https://trovo.live/chat/Shnumi?"></iframe></td>
-      <td><iframe id="chatTwitc" frameborder="0" src="https://www.twitch.tv/embed/shnumi/chat?parent=eternitegik.github.io&dark"></iframe></td>
-    </tr>
-  </tbody>
-</table>
-</body>-->
-    <html>
-  <body>
-      <table border="0" cellspacing="0" cellpadding="0">
-          <tbody>
-            <tr>
-              <td id="Twitc"><div id="twitch-embed"></div></td>
-              <td><iframe id="chatTrovo" frameborder="0" src="https://trovo.live/chat/Shnumi?"></iframe></td>
-            </tr>
-          </tbody>
-        </table>
-    <!-- Add a placeholder for the Twitch embed -->
-
-
-    <!-- Load the Twitch embed script -->
-    <script src="https://embed.twitch.tv/embed/v1.js"></script>
-
-    <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element. -->
-    <script type="text/javascript">
-      var embed = new Twitch.Embed("twitch-embed", {
-        width: 1400,
-        height: 900,
-        channel: "shnumi",
-        layout: "video-with-chat",
-        autoplay: false,
-        // Only needed if this page is going to be embedded on other websites
-        parent: ["eternitegik.github.io"]
-      });
-
-      embed.addEventListener(Twitch.Embed.VIDEO_READY, () => {
-        var player = embed.getPlayer();
-        player.play();
-      });
-    </script>
-  </body>
-</html>
+          embed.addEventListener(Twitch.Embed.VIDEO_READY, () => {
+            var player = embed.getPlayer();
+            player.play();
+          });
+        </script>
+      </body>
 </html>
