--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ body {
             const availableScreenHeight = window.screen.availHeight
             
             var widthjs = window.screen.availWidth - 500
+            document.getElementById("profileURL").style.width = widthjs;
 
           var embed = new Twitch.Embed("twitch-embed", {
             width: widthjs,
