--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ body {
             const availableScreenHeight = window.screen.availHeight
             
             var widthjs = window.screen.availWidth - 500
-            document.getElementById("profileURL").style.width = widthjs;
+            document.getElementById("Twitc").style.width = widthjs;
 
           var embed = new Twitch.Embed("twitch-embed", {
-            width: widthjs,
+            width: 1400,
             height: 900,
             channel: "shnumi",
             layout: "video-with-chat",
