--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ body {
 #Twitc {
     height: 900px;
     width: 1400px;
+    margin: 0px;
+    padding: 0px;
     background-color: rgba(0,0,0,1.00);
 }
 #chatTrovo {
@@ -39,10 +41,10 @@ body {
         <script src="https://embed.twitch.tv/embed/v1.js"></script>
         <script type="text/javascript">
             
-            const availableScreenWidth = window.screen.availWidth
-            const availableScreenHeight = window.screen.availHeight
+            const availableScreenWidth = window.innerWidth;
+            const availableScreenHeight = window.innerHeight;
             
-            var widthjs = window.screen.availWidth - 500
+            var widthjs = window.screen.availWidth - 500;
 
           var embed = new Twitch.Embed("twitch-embed", {
             width: 1400,
