--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {
             player.play();
           });            
             
-            document.getElementById("Twitc").style.width = widthjs;
+            document.getElementById("Twitc").style.width = widthjs + 'px';
         </script>
       </body>
 </html>
