--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ body {
 #twitch-embed {
     height: 900px;
     width: 900px;
+    margin: 0px;
+    padding: 0px;
     background-color: rgba(0,0,0,1.00);
 }
 #Twitc {
