--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@ body {
 </head>
       <body>
           <table border="0" cellspacing="0" cellpadding="0">
-              <tbody>
-                <tr>
-                  <td id="Twitc"><div id="twitch-embed"></div></td>
+              <tbody><tr><td id="Twitc"><div id="twitch-embed"></div></td>
                   <td><iframe id="chatTrovo" frameborder="0" src="https://trovo.live/chat/Shnumi?"></iframe></td>
                 </tr>
               </tbody>
