--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
             var widthjs = window.screen.availWidth - 500;
 
           var embed = new Twitch.Embed("twitch-embed", {
-            width: widthjs,
+            width: widthjs - 10,
             height: availableScreenHeight,
             channel: "shnumi",
             layout: "video-with-chat",
