--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ body {
     padding: 0px;
     width: 100%;
     background-color: rgba(0,0,0,1.00);
+    color: rgba(219,219,219,1.00);
 }
 #twitch-embed {
     margin: 0px;
@@ -29,18 +30,43 @@ body {
     width: 350px;
     background-color: rgba(0,0,0,1.00);
 }
+#mess {
+    padding-top: 100px;
+    padding-right: 0px;
+    padding-left: 0px;
+    padding-bottom: 0px;
+    margin: 0px;
+    display: inherit;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
+#mess  a {
+    text-decoration: none;
+    cursor: pointer;
+    color: #FFFFFF;
+}
+#stream {
+    padding: 0px;
+    margin: 0px;
+    display: none;
+}
 </style>
 </head>
-      <body>
-          <table border="0" cellspacing="0" cellpadding="0">
-              <tbody><tr><td id="Twitc"><div id="twitch-embed"></div></td>
-                  <td><iframe id="chatTrovo" frameborder="0" src="https://trovo.live/chat/Shnumi?"></iframe>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          
+<body>
+<div id="mess">
+        Загрузка...
+        </div>
+<div id="stream">
+        <table border="0" cellspacing="0" cellpadding="0">
+            <tbody><tr><td id="Twitc"><div id="twitch-embed"></div></td>
+                <td id="TrovoUser"><iframe id="chatTrovo" frameborder="0" src="https://trovo.live/chat/Shnumi?"></iframe>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>    
 <script type="text/javascript" src="ind.js"></script>
 <script src="https://embed.twitch.tv/embed/v1.js"></script>
-      </body>
+</body>
 </html>
